configs/qemu_aarch64_virt_defconfig: add library for xfstests building

--- a/configs/qemu_aarch64_virt_defconfig
+++ b/configs/qemu_aarch64_virt_defconfig
@@ -28,3 +28,7 @@ BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 # host-qemu for gitlab testing
 BR2_PACKAGE_HOST_QEMU=y
 BR2_PACKAGE_HOST_QEMU_SYSTEM_MODE=y
+
+# Library for xfstests
+BR2_PACKAGE_LIBXFSPROGS=y
+BR2_PACKAGE_ACL=y
