configs/qemu_aarch64_virt_defconfig: add library for xfstests running

--- a/configs/qemu_aarch64_virt_defconfig
+++ b/configs/qemu_aarch64_virt_defconfig
@@ -32,3 +32,11 @@ BR2_PACKAGE_HOST_QEMU_SYSTEM_MODE=y
 # Library for xfstests
 BR2_PACKAGE_LIBXFSPROGS=y
 BR2_PACKAGE_ACL=y
+BR2_PACKAGE_LZ4=y
+BR2_PACKAGE_LZ4_PROGS=y
+BR2_PACKAGE_GDBM=y
+BR2_PACKAGE_LIBAIO=y
+BR2_PACKAGE_LIBCAP=y
+BR2_PACKAGE_LIBCAP_TOOLS=y
+BR2_PACKAGE_LIBURING=y
+BR2_PACKAGE_LIBSELINUX=y
