--- a/configs/qemu_aarch64_virt_defconfig
+++ b/configs/qemu_aarch64_virt_defconfig
@@ -40,3 +40,14 @@ BR2_PACKAGE_LIBCAP=y
 BR2_PACKAGE_LIBCAP_TOOLS=y
 BR2_PACKAGE_LIBURING=y
 BR2_PACKAGE_LIBSELINUX=y
+
+# Package for xfstests
+BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
+BR2_PACKAGE_GREP=y
+BR2_PACKAGE_XFSPROGS=y
+BR2_PACKAGE_PERL=y
+BR2_PACKAGE_BASH=y
+BR2_PACKAGE_COREUTILS=y
+BR2_PACKAGE_KMOD=y
+BR2_PACKAGE_KMOD_TOOLS=y
+BR2_PACKAGE_UTIL_LINUX_BINARIES=y
