configs/qemu_aarch64_virt_defconfig: add package for xfstests testsuite

--- a/configs/qemu_aarch64_virt_defconfig
+++ b/configs/qemu_aarch64_virt_defconfig
@@ -51,3 +51,16 @@ BR2_PACKAGE_COREUTILS=y
 BR2_PACKAGE_KMOD=y
 BR2_PACKAGE_KMOD_TOOLS=y
 BR2_PACKAGE_UTIL_LINUX_BINARIES=y
+BR2_PACKAGE_GLIBC_UTILS=y
+BR2_PACKAGE_XZ=y
+BR2_PACKAGE_FIO=y
+BR2_PACKAGE_GAWK=y
+BR2_PACKAGE_E2FSPROGS=y
+BR2_PACKAGE_E2FSPROGS_DEBUGFS=y
+BR2_PACKAGE_E2FSPROGS_E4DEFRAG=y
+BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
+BR2_PACKAGE_LVM2=y
+BR2_PACKAGE_KEYUTILS=y
+BR2_PACKAGE_QUOTA=y
+BR2_PACKAGE_QUOTATOOL=y
+BR2_PACKAGE_UTIL_LINUX_LOSETUP=y
