--- a/board/qemu/aarch64-virt/linux.config
+++ b/board/qemu/aarch64-virt/linux.config
@@ -70,6 +70,7 @@ CONFIG_MAILBOX=y
 CONFIG_PL320_MBOX=y
 CONFIG_ARM_SMMU_V3=y
 CONFIG_EXT4_FS=y
+CONFIG_FS_ENCRYPTION=y
 CONFIG_FUSE_FS=y
 CONFIG_VIRTIO_FS=y
 CONFIG_OVERLAY_FS=y
@@ -77,3 +78,10 @@ CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_NFS_FS=y
 CONFIG_ROOT_NFS=y
+# CONFIG_CRYPTO_CBC is not set
+# CONFIG_CRYPTO_CTS is not set
+# CONFIG_CRYPTO_ECB is not set
+# CONFIG_CRYPTO_XTS is not set
+# CONFIG_CRYPTO_HMAC is not set
+# CONFIG_CRYPTO_SHA512 is not set
+# CONFIG_CRYPTO_AES is not set
