board/qemu/aarch64-virt/linux.config: enable uid_map
In "_require_ugid_map", xfstests use kernel feature
user namespace.

--- a/board/qemu/aarch64-virt/linux.config
+++ b/board/qemu/aarch64-virt/linux.config
@@ -8,6 +8,7 @@ CONFIG_BLK_CGROUP=y
 CONFIG_CPUSETS=y
 CONFIG_CGROUP_DEVICE=y
 CONFIG_CGROUP_CPUACCT=y
+CONFIG_USER_NS=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_PROFILING=y
 CONFIG_ARCH_VEXPRESS=y
