--- a/board/qemu/aarch64-virt/linux.config
+++ b/board/qemu/aarch64-virt/linux.config
@@ -46,6 +46,13 @@ CONFIG_SCSI_LOGGING=y
 CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_SCSI_VIRTIO=y
 CONFIG_ATA=y
+CONFIG_MD=y
+CONFIG_BLK_DEV_DM=y
+CONFIG_DM_SNAPSHOT=y
+CONFIG_DM_THIN_PROVISIONING=y
+CONFIG_DM_ZERO=y
+CONFIG_DM_FLAKEY=y
+CONFIG_DM_LOG_WRITES=y
 CONFIG_NETDEVICES=y
 CONFIG_DUMMY=y
 CONFIG_MACVLAN=y
