--- a/board/qemu/aarch64-virt/linux.config
+++ b/board/qemu/aarch64-virt/linux.config
@@ -84,6 +84,7 @@ CONFIG_PL320_MBOX=y
 CONFIG_ARM_SMMU_V3=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
+CONFIG_EXT4_FS_SECURITY=y
 CONFIG_FS_ENCRYPTION=y
 CONFIG_QUOTA=y
 CONFIG_FUSE_FS=y
