--- a/board/qemu/aarch64-virt/linux.config
+++ b/board/qemu/aarch64-virt/linux.config
@@ -87,6 +87,7 @@ CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_FS_DAX=y
 CONFIG_FS_ENCRYPTION=y
+CONFIG_FS_VERITY=y
 CONFIG_QUOTA=y
 CONFIG_FUSE_FS=y
 CONFIG_VIRTIO_FS=y
@@ -101,4 +102,3 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_LSM="selinux"
 CONFIG_CRYPTO_ADIANTUM=y
 CONFIG_CRYPTO_ESSIV=y
-CONFIG_CRYPTO_SHA256=y
