--- a/configs/qemu_aarch64_virt_defconfig
+++ b/configs/qemu_aarch64_virt_defconfig
@@ -5,6 +5,7 @@ BR2_cortex_a53=y
 # System
 BR2_SYSTEM_DHCP="eth0"
 BR2_ROOTFS_USERS_TABLES="board/qemu/aarch64-virt/users.txt"
+BR2_ROOTFS_OVERLAY="board/qemu/aarch64-virt/rootfs_overlay"
 
 # Filesystem
 BR2_TARGET_ROOTFS_TAR_GZIP=y
